force-app/src/objects/TR1__LK_EasyApplyApplicant__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Apply_Date__c</fullName>
        <label>Apply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Certifications__c</fullName>
        <label>Certifications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__CompanyJobCode__c</fullName>
        <label>CompanyJobCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__CompanyName__c</fullName>
        <label>CompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Phone_Number__c</fullName>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TR1__CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Educations__c</fullName>
        <label>Educations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Headline__c</fullName>
        <label>Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Honors__c</fullName>
        <label>Honors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Industry_Name__c</fullName>
        <label>Industry Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__JobState__c</fullName>
        <label>JobState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Posting__c</fullName>
        <label>Job Posting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Jobid__c</fullName>
        <externalId>true</externalId>
        <label>Jobid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Languages__c</fullName>
        <label>Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ListDate__c</fullName>
        <label>ListDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Localized_FirstName__c</fullName>
        <label>Localized FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Localized_LastName__c</fullName>
        <label>Localized LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Localized_Phonetic_FirstName__c</fullName>
        <label>Localized Phonetic FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Localized_Phonetic_LastName__c</fullName>
        <label>Localized Phonetic LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__LocationDescription__c</fullName>
        <label>LocationDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Member__c</fullName>
        <description>This stores the linkedIn member person id of the Applicant on LinkedIn</description>
        <externalId>true</externalId>
        <label>Member</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Phonetic_FirstName__c</fullName>
        <label>Phonetic FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Phonetic_LastName__c</fullName>
        <label>Phonetic LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Positions__c</fullName>
        <label>Positions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Resume_FileName__c</fullName>
        <label>Resume FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Resume__c</fullName>
        <label>Resume</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__RetriedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is true if resume data was not sent by LinkedIn for the first time and a call to fetch the resume was retried again.</description>
        <label>RetriedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Specialties__c</fullName>
        <label>Specialties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Vanity_Name__c</fullName>
        <label>Vanity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Websites__c</fullName>
        <label>Websites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__id__c</fullName>
        <externalId>true</externalId>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>(Deprecated)LK EasyApplyApplicant</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Member__c</columns>
        <columns>TR1__Job_Posting__c</columns>
        <columns>TR1__Apply_Date__c</columns>
        <columns>TR1__Resume_FileName__c</columns>
        <columns>TR1__Languages__c</columns>
        <columns>TR1__Last_Name__c</columns>
        <columns>TR1__Contact_Email__c</columns>
        <columns>TR1__Localized_FirstName__c</columns>
        <columns>TR1__Localized_LastName__c</columns>
        <columns>TR1__id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TR1__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LK EasyApplyApplicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>